fix editor overflow on mobile devices

--- a/coutoire/style-editor.css
+++ b/coutoire/style-editor.css
@@ -721,13 +721,30 @@ object {
 }
 
 .wp-block-group.has-background {
-	padding: 21.312px;
+	padding: 16px;
 }
 
 @media only screen and (min-width: 560px) {
 	.wp-block-group.has-background {
 		padding: 32px;
 	}
+}
+
+[data-align=full] .wp-block-group.has-background > .wp-block-group__inner-container > [data-align=full] {
+	margin-left: -16px;
+	width: calc(100% + 32px);
+}
+
+@media only screen and (min-width: 560px) {
+	[data-align=full] .wp-block-group.has-background > .wp-block-group__inner-container > [data-align=full] {
+		margin-left: -32px;
+		width: calc(100% + 64px);
+	}
+}
+
+.wp-block[data-type="core/group"] > .editor-block-list__block-edit > div > .wp-block-group.has-background > .wp-block-group__inner-container > .editor-inner-blocks > .editor-block-list__layout > .wp-block[data-align=full] {
+	margin: 0;
+	width: 100%;
 }
 
 .wp-block[data-type="core/group"] > .editor-block-list__block-edit > div > .wp-block-group.has-background > .wp-block-group__inner-container > .editor-inner-blocks > .editor-block-list__layout > .wp-block[data-align=full] {
